--- a/playbook_headless.yml
+++ b/playbook_headless.yml
@@ -1,8 +1,14 @@
 ---
 
-- name: Install WiFi Access Point
+################################
+# Configure device for headless operation. This currently consists of
+# updating the grub configuration so that it does not set the timeout
+# to 30 seconds when Ubuntu is installed with LVM
+#
+
+- name:  Configure for headless operation
   hosts: all
   become: yes
 
   roles:
-    - wifi_ap
+    - role: headless
