--- a/playbook_setup.yml
+++ b/playbook_setup.yml
@@ -5,8 +5,10 @@
   become: yes
 
   roles:
-    - role: wifi_ap
+    #- role: wifi_ap
     - role: headless
+    - role: setup_mongodb
+    - role: setup_apache
 
   tasks:
     - name: Install the One True Editor
