--- a/playbook_setup.yml
+++ b/playbook_setup.yml
@@ -5,10 +5,11 @@
   become: yes
 
   roles:
-    #- role: wifi_ap
+    - role: ansible-depends
     - role: headless
     - role: setup_mongodb
     - role: setup_apache
+    - role: wifi_ap
 
   tasks:
     - name: Install the One True Editor
