--- a/roles/setup_dotnet_core/tasks/main.yml
+++ b/roles/setup_dotnet_core/tasks/main.yml
@@ -2,7 +2,7 @@
 
 - name: Get package to setup for installation of dotnet core
   get_url:
-    url:   https://packages.microsoft.com/config/{{ansible_distribution_version|lower}}/{{ansible_distribution_version}}/packages-microsoft-prod.deb
+    url:   https://packages.microsoft.com/config/{{ansible_distribution|lower}}/{{ansible_distribution_version}}/packages-microsoft-prod.deb
     dest:  /tmp/packages-microsoft-prod.deb
 
 - name: Install dotnet package info
